# holiday-finder-proximity

./: .gitignore  Dockerfile  README.md  curl-example.md  deploy.sh  hotels_output.json  pyproject.toml  requirements.txt
src/: distance.py  get_holiday_offers.py  hotel_distance_sorter.py  main.py  offers_distance_sorter.py  params.py
src/app/: distance.py  get_holiday_offers.py  offers_distance_sorter.py  params.py
src/middleware/: rate_limiter.py
src/models/: holiday_finder_api.py  offer.py
src/routes/: offers.py
