[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "holiday-finder"
version = "0.1.0"
description = "Find and sort holiday finder offers by proximity to a given address"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Hadar Dagan", email = "hadarda11@gmail.com"}
]
dependencies = [
    "requests>=2.25.0",
    "geocoder>=1.38.1",
    "pydantic>=2.0.0"
]

[project.scripts]
hotel-distance-sorter = "hotel_distance_sorter:main"
